# macobot

./: .gitignore  Cargo.toml  README.md  log4rs.yml
src/: config.rs  external.rs  handler.rs  instance.rs  main.rs
src/config/: bot.rs  mod.rs
src/handler/: async_trait.rs  handler.rs  mod.rs
template/: config.toml
test/docs/: config.toml
