[package]
name = "macobot"
version = "0.1.0"
edition = "2021"

[dependencies.log]
version = "0.4.17"

[dependencies.log4rs]
version = "1.2.0"
features = [ "console_appender", "rolling_file_appender" ]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version  = "0.5"

[dependencies.confy]
version = "0.5.1"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "sync", "time"]
